@@ -16,7 +16,6 @@ define(function (require) {
     var Soul              = require("ethon/soul"),
         inherit           = require("ethon/inherit"),
         proxy             = require("ethon/proxy"),
-        resourceAssistant = require("ethon/resource_assistant"),
         renderAssistant   = require("ethon/render_assistant"),
         Sprite;
 
@@ -27,24 +26,17 @@ define(function (require) {
      * @param {String} name Sprite's name
      * @param {Number} x Position on the x-axis
      * @param {Number} y Position on the y-axis
-     * @param {Number} w Sprite's width
-     * @param {Number} h Sprite's height
-     * @param {String} textureName Sprite's texture name
-     * @param {String} texturePath Texture's path
+     * @param {String} texture Sprite's texture
      */
-    Sprite = function (name, x, y, w, h, textureName, texturePath) {
+    Sprite = function (name, x, y, texture) {
         Soul.call(this, name, x, y);
-        this.width = w;
-        this.height = h;
-        this.texture = null;
+        this.texture = texture;
+        this.width = this.texture.width;
+        this.height = this.texture.height;
         this.animations = {};
         this.currentAnimation = null;
         this.currentAnimationIndex = 0;
         this.lastAnimationUpdate = new Date();
-
-        resourceAssistant.loadImage(textureName, texturePath, proxy(this, function (image) {
-            this.texture = image;
-        }));
     };
 
     // Sprite inherit from Soul
@@ -81,15 +73,13 @@ define(function (require) {
      */
     Sprite.prototype.render = function () {
         var position = this.getPosition(),
-            currentFrame = this.animations[this.currentAnimation][this.currentAnimationIndex];
+            currentFrame;
 
-        // Render if resource is loaded
-        if (this.texture !== null) {
-            if (this.animations[this.currentAnimation].length > 0) {
-                renderAssistant.drawSubImage(position.x, position.y, this.texture, currentFrame.frame, this.width, this.height);
-            } else {
-                renderAssistant.drawImage(position.x, position.y, this.texture);
-            }
+        if (this.currentAnimation !== null && this.animations[this.currentAnimation].length > 0) {
+            currentFrame = this.animations[this.currentAnimation][this.currentAnimationIndex];
+            renderAssistant.drawSubImage(position.x, position.y, this.texture, currentFrame.frame, this.width, this.height);
+        } else {
+            renderAssistant.drawImage(position.x, position.y, this.texture);
         }
     };
 
@@ -100,14 +90,17 @@ define(function (require) {
      * @param {Number} dt Number of milliseconds since last update
      */
     Sprite.prototype.update = function (dt) {
-        var currentFrame = this.animations[this.currentAnimation][this.currentAnimationIndex],
-            now = new Date(),
-            animationDt = new Date(now.getTime() - this.lastAnimationUpdate.getTime()).getMilliseconds() / 1000;
+        var now = new Date(),
+            currentFrame,
+            animationDt;
 
         // Call base object update
         Soul.prototype.update.call(this, dt);
 
-        if (this.animations[this.currentAnimation].length > 0) {
+        if (this.currentAnimation !== null && this.animations[this.currentAnimation].length > 0) {
+            currentFrame = this.animations[this.currentAnimation][this.currentAnimationIndex];
+            animationDt = new Date(now.getTime() - this.lastAnimationUpdate.getTime()).getMilliseconds() / 1000;
+
             if (animationDt > currentFrame.time) {
                 this.currentAnimationIndex = (this.currentAnimationIndex + 1) % this.animations[this.currentAnimation].length;
                 this.lastAnimationUpdate = now;
